feat: added index.html with semantics, css included but not yet working

--- a/index.html
+++ b/index.html
@@ -48,6 +48,12 @@
 
       <section>
         <h2>Our Services</h2>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam in
+          lorem eget urna scelerisque efficitur. Fusce at mauris eu quam
+          vestibulum semper. Phasellus volutpat, purus in lacinia ultricies,
+          ante ipsum auctor lorem.
+        </p>
         <ul>
           <li>Service 1</li>
           <li>Service 2</li>
